<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/count_parents_name"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/empfaenger_vorname"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" />

    <Space
        android:id="@+id/count_parents_spacer1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/count_parents_name" />

    <TextView
        android:id="@+id/count_parents_count"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/count_parents_spacer1"
        android:text="@string/title_actual_count"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/show_actual_count"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/count_parents_spacer1"
        android:layout_marginLeft="90dp"
        android:textAlignment="textEnd"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/euro"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_below="@id/count_parents_spacer1"
        android:layout_marginLeft="195dp"
        android:text="@string/euro"
        android:textAlignment="textStart"
        android:textStyle="bold" />

    <Space
        android:id="@+id/count_parents_spacer2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/count_parents_count" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/count_parents_spacer2">

        <RadioButton
            android:id="@+id/radioButton_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="" />

        <TextView
            android:id="@+id/title_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/days_10"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="" />

        <TextView
            android:id="@+id/title_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/days_30"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="" />

        <TextView
            android:id="@+id/title_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/days_60"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
